# radiov3_sw

./: .gitignore  .gitmodules  Makefile  partitions.csv  sdkconfig
.github/workflows/: latest.yml  release.yml
components/audio/: CMakeLists.txt  audio.c
components/bluetooth/: CMakeLists.txt  bluetooth.c
components/buffer/: CMakeLists.txt  ring.c
components/db/: CMakeLists.txt  db.c
components/downloader/: CMakeLists.txt  downloader.c
components/fetchers/: CMakeLists.txt  fetch_bt.c  fetch_file.c  fetch_socket_radio.c
components/fonts/: CMakeLists.txt  lv_font_rv3_16.c  lv_font_rv3_24.c
components/id3/: CMakeLists.txt  id3.c
components/lvgl/: lv_conf.h
components/lvgl_ili9341/: disp_spi.c  ili9341.c  ili9341.h  ili9488.h  tp_spi.c  xpt2046.c  xpt2046.h
components/maddec/: CMakeLists.txt  bit.c  decoder.c  fixed.c  frame.c  huffman.c  layer12.c  layer3.c  maddec.c  stream.c  synth.c  timer.c  version.c
components/ota_update/: CMakeLists.txt  ota_update.c
components/playlist/: CMakeLists.txt  playlist.c
components/ui/: CMakeLists.txt  album_menu.c  artist_menu.c  bt_player.c  main_menu.c  music_player.c  paging_menu.c  playlist_menu.c  radio_menu.c  radio_player.c  settings.c  song_menu.c  system_menu.c  theme.c  wifi_setting.c
components/ui/include/: album_menu.h  artist_menu.h  bt_player.h  main_menu.h  music_player.h  paging_menu.h  playlist_menu.h  radio_menu.h  radio_player.h  settings.h  song_menu.h  system_menu.h  theme.h  ui.h  wifi_setting.h
main/: main.c
scripts/: build_fonts.py  build_manifest.py  copy.py  delete.py  display.py
(+54 files in other folders)
